Agregado metodo de autenticacion con cuenta de google

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LoginFirebaseConKotlin</string>
+    <string name="prefs_file">com.pepivsky.loginfirebaseconkotlin.PREFERENCE_FILE_KEY</string>
 </resources>
