--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,12 @@
     <!--claves para el login de Facebook-->
     <string name="facebook_app_id">194588462134583</string>
     <string name="fb_login_protocol_scheme">fb194588462134583</string>
+    <string name="text_home">Home</string>
+    <string name="text_create">Create</string>
+    <string name="text_profile">Profile</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="contentInfo">Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage</string>
+
 
 </resources>
